# ant_colony_optimization

./: LICENSE  README.md  ant_batch.csv  pyproject.toml  requirements.in  requirements.txt
notebooks/: aco.ipynb  scratch.ipynb
src/: aco.py  ant_batch.py  viz.py
src/ant_colony_optimization/: core.py  viz.py
